# src/api/controllers/mail/router.ts
@@ -1,0 +1,9 @@
+import express from 'express'
+import mailController from './mailController'
+
+export default express
+  .Router()
+  .post(
+    '/send-mail',
+    mailController.sendEmail
+  )
