# src/api/interfaces/mail.interface.ts
@@ -1,0 +1,8 @@
+export interface Mail {
+  userName: string
+  from: string
+  to: string  
+  subject: string  
+  text: string  
+  html: string  
+}
