# src/routes.ts
@@ -1,8 +1,8 @@
 import { Application } from 'express'
 import generalController from './api/controllers/general/router'
-import userRouter from './api/controllers/user/router'
+import mailRouter from './api/controllers/mail/router'
 
 export default function routes(app: Application): void {
-  app.use('/api/v3/user', userRouter)
+  app.use('/api/v3/mail', mailRouter)
   app.use('/api/v3/healthcheck', generalController)
 }
